--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,7 @@
 get report => add state checking
 get reports => add state checking
 
+get language duplicate implentation in 2 files
+make sure about strings and make sure about this.strings.xyz in ajax calls (may this.strings != computed.strings)
+change arrow icon in reports page when language changes 
+add sort button in reports page instead of showing all sort results
